Fix T44880: transparency filter is only valid with raytransp, not ztransp.